<resources>
    <string name="app_name">Read&amp;Win</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_email_from_users">This email address doesn\'t match</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password_from_users">Password doesn\'t match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_firstname">This first name is invalid</string>
    <string name="error_invalid_lastname">This last name is invalid</string>
    <string name="error_invalid_yearofbirth">This Year of Birth is invalid</string>

    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_game_main_page">GameMainPage</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Categories-->

    <string name="categorie1">8 - 10 Years Old</string>
    <string name="title_activity_login__register_">Login_Register_Activity</string>

    <!-- Draws-->

    <string name="here_is_your_canvas">Here is your canvas. Start to paint!</string>
    <string name="color">Color</string>
    <string name="emboss">Bold</string>
    <string name="blur">Blur</string>
    <string name="brush_size">Brush size</string>
    <string name="erase">Erase</string>
    <string name="clear_all">Erase entire foreground</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="open_image">Open image as background</string>
    <string name="fill_background_with_color">Fill background with color</string>
    <string name="your_selected_size_is">Selected size: %1$s</string>
    <string name="choose_width">Brush size</string>
    <string name="saved_your_location_to">Saved your artwork to %1$s</string>
    <string name="select">Select</string>
    <string name="continue_fuck">Continue</string> <!-- Workaround to avoid "R.string.continue", that it's as a special class-word! D: -->
    <string name="ok">OK</string>
    <string name="pick_color">Pick a Color</string>
    <string name="toolbox_share_title">Share</string>
    <string name="share_title_template">Look at what I painted with Acrylic Paint! --- Acrylic Paint (Simple finger painting) - https://f-droid.org/app/anupam.acrylic</string>
    <string name="share_text_template">Share as text</string>
    <string name="no_way_to_share">Can\'t locate an app to share with…</string>
    <string name="normal">Pencil</string>
    <string name="title_activity_about">About</string>
    <string name="press_back_again">Press back again to exit!\n(Losing all the unsaved work)</string>
    <string name="select_image_to_open">Select image to open</string>
    <string name="extract_color">Extract a color</string>
    <string name="color_extracted">New color extracted</string>
    <string name="tap_to_extract_color">Tap anywhere to extract a color</string>
    <string name="ability_disabled_need_newer_api_level">That ability is disabled because it requires a newer Android version (at least API level 17).</string>
    <string name="smudge">Smudge</string>

    <string name="intro_text">Will you be able to win the reward!?\r\n\r\n

Challenge your knowledge of selected books and answer as many questions as you can!\r\n\r\n

For that, you just need to:\r\n\r\n

1. Select a book,\r\n
2. Read this book,\r\n
3. Start the questionnaire,\r\n
4. To best answer the different questions (multiple choice, find the pairs or order the answers),\r\n
5. Get first place on the podium by reading as many books as you can</string>

</resources>
