<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/color_menu"
        android:icon="@drawable/color"
        android:showAsAction="always"
        android:title="@string/color"/>
    <item
        android:id="@+id/size_menu"
        android:icon="@drawable/size"
        android:showAsAction="always"
        android:title="@string/brush_size">
    </item>
    <item
        android:id="@+id/erase_menu"
        android:icon="@drawable/erase"
        android:showAsAction="always"
        android:title="@string/erase">
    </item>
    <item
        android:id="@+id/clear_all_menu"
        android:icon="@drawable/clear_all"
        android:showAsAction="always"
        android:title="@string/clear_all">
    </item>
    <item
        android:id="@+id/save_menu"
        android:icon="@drawable/save"
        android:showAsAction="always"
        android:title="@string/save">
    </item>

</menu>
